# ScentAI

./: .dockerignore  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dataset/: ATTRIBUTION.md  LICENSE.md  README.md  kaggle-metadata.template.json  sample.json  statistics.json
deploy/: .env.example  README.md  api.Dockerfile  compose.yaml  modal_app.py  modal_colab_upload.py  modal_job_smoke_app.py  modal_publish_hf.py  modal_setup_app.py  model.Dockerfile  requirements-api.txt  requirements-modal.txt  requirements-retrieval.txt  requirements-test.txt  retrieval.Dockerfile
docs/: architecture.md  artifacts.md  evaluation.md  inference_runtime.md  methodology.md  roadmap.md
evaluation/: final_eval_human_review.csv  final_eval_metadata.json  final_eval_summary.json  final_eval_v1.jsonl
model/: LICENSE.md  README.md
notebooks/: full_pipeline_colab.ipynb  inference_colab.ipynb  retrieval_colab.ipynb  train_gemma4_lora_colab.ipynb  upload_modal_artifacts_colab.ipynb
research/: __init__.py  build_runtime_catalog.py  build_vectordb.py  clean_dataset.py  evaluate_retrieval.py  explore.py  generate_l1.py  generate_l2.py  generate_l3.py  generate_l4.py  generate_l5.py  prepare_finetune_splits.py  provider_pool.json  query_vectordb.py  run_l4_chunks.py  run_l5_chunks.py  sanity_check.py  test_retrieval.py  validate_l2_dataset.py
tests/: test_entity_resolution.py  test_orchestrator.py  test_orchestrator_contracts.py  test_retrieval_engine.py  test_runtime_pipeline.py
tools/: audit_training_dataset.py  build_kaggle_package.py
(+133 files in other folders)
